# ai-fund-fastapi

./: .env  Dockerfile  LICENSE  README.md  Taskfile.yml  config.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt
api/endpoints/ratios/: leverage_ratios.py
app/: main.py
app/agents/: financial_analysis_agent.py  financial_metrics.py  financial_metrics_agent.py
app/api/endpoints/: company.py  insider_transactions.py  prices.py
app/api/endpoints/ratios/: ebitda_ratios.py  profitability_ratios.py  ratios.py  stock_performance.py
app/endpoints/: financials.py  metrics.py  news.py
app/endpoints/financial_datasets/: company.py  financials.py  insider_transactions.py  prices.py  sec_fillings.py
app/endpoints/ratios/: dupont_analysis.py  ebitda_ratios.py  economic_value.py  efficiency_ratios.py  leverage_ratios.py  liquidity_ratios.py  profitability_ratios.py  ratios.py  stock_performance.py
app/schemas/: financial_metrics.py
backend/: config.py  data_fetcher.py  financial_models.py  models.py  scheduler.py
backend/api/: main.py
backend/api/endpoints/: company_facts.py  financials.py  insider_transactions.py  news.py  prices.py  sec_fillings.py  stocks.py
backend/api/endpoints/ratios/: dupont_analysis.py  economic_value.py  efficiency_ratios.py  liquidity_ratios.py
frontend/app/: layout.tsx
tests/: test_endpoints.py  test_financial_metrics.py  test_financial_models.py
