[tool.poetry]
name = "ai-financial-analyst"
version = "0.1.0"
description = ""
authors = ["Alvaro Peña"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
