[tool.poetry]
name = "ai-fund-fastapi"
version = "0.1.0"
description = ""
authors = ["Alvaro Peña"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"
langchain = "^0.3.5"
langchain-openai = "^0.2.4"
langchain-community = "^0.3.3"
langchain-core = "^0.3.14"
openai = "^1.53.0"
transformers = "^4.46.1"
torch = "^2.5.1"
sentence-transformers = "^3.2.1"
accelerate = "^1.0.1"
tiktoken = "^0.8.0"
numpy = "^1.24.0"
black = "^24.10.0"
pytest = "^8.3.3"
tavily-python = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
